Notification File altered - Commit update 27/4/19

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="create_password_hint1">Password</string>
     <string name="create_password_hint2">Re-Enter Password</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_notifications">Notifications</string>
 
 
 </resources>
