--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,10 +31,12 @@
     <string name="title_activity_notifications">Notifications</string>
     <string name="dashboard_heading">Dashboard</string>
     <string name="dashboard_logo">Dashboard logo</string>
-    <string name="dashboard_button_profile">Profile</string>
+    <string name="dashboard_button_calendar">Calendar</string>
     <string name="dashboard_button_subjects">Subjects</string>
     <string name="dashboard_button_statistics">Statistics</string>
     <string name="dashboard_button_notifications">Notifications</string>
+    <string name="dashboard_button_ontology">Ontology (OWL)</string>
+    <string name="dashboard_button_goals">Goals</string>
 
     <!-- Strings related to Notification -->
     <string name="notification_name">Notification Name</string>
