--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,9 @@
     <string name="goals_dueDate">Goal Due Date</string>
     <string name="goals_boxTextOne">Credit Points</string>
     <string name="goals_boxTextOneAnswer">80%</string>
+    <string name="goal_description">Goal Description</string>
+    <string name="enrolment_boxTextTwo">Outstanding Assignments</string>
+    <string name="enrolment_boxTextThree">6</string>
 
 </resources>
 
